--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple Countdown Timer</string>
+    <string name="app_name">Cronómetro</string>
     <string name="cron_metro">Cronómetro</string>
     <string name="_10_00">10:00</string>
     <string name="start">Start</string>
